LuaParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .LuaListener import LuaListener
else:
    from LuaListener import LuaListener


class LuaParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"';'", u"'='", u"'break'", u"'goto'", 
                     u"'do'", u"'end'", u"'while'", u"'repeat'", u"'until'", 
                     u"'if'", u"'then'", u"'elseif'", u"'else'", u"'for'", 
                     u"','", u"'in'", u"'function'", u"'local'", u"'return'", 
                     u"'::'", u"'.'", u"':'", u"'nil'", u"'false'", u"'true'", 
                     u"'...'", u"'('", u"')'", u"'['", u"']'", u"'{'", u"'}'", 
                     u"'or'", u"'and'", u"'<'", u"'>'", u"'<='", u"'>='", 
                     u"'~='", u"'=='", u"'..'", u"'+'", u"'-'", u"'*'", 
                     u"'/'", u"'%'", u"'not'", u"'#'", u"'^'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"NAME", u"NORMALSTRING", 
                      u"CHARSTRING", u"LONGSTRING", u"INT", u"HEX", u"FLOAT", 
                      u"HEX_FLOAT", u"COMMENT", u"LINE_COMMENT", u"WS", 
                      u"SHEBANG" ]

    RULE_chunk = 0
    RULE_block = 1
    RULE_stat = 2
    RULE_retstat = 3
    RULE_label = 4
    RULE_funcname = 5
    RULE_varlist = 6
    RULE_namelist = 7
    RULE_explist = 8
    RULE_exp = 9
    RULE_var = 10
    RULE_prefixexp = 11
    RULE_functioncall = 12
    RULE_varOrExp = 13
    RULE_nameAndArgs = 14
    RULE_varSuffix = 15
    RULE_args = 16
    RULE_functiondef = 17
    RULE_funcbody = 18
    RULE_parlist = 19
    RULE_tableconstructor = 20
    RULE_fieldlist = 21
    RULE_field = 22
    RULE_fieldsep = 23
    RULE_operatorOr = 24
    RULE_operatorAnd = 25
    RULE_operatorComparison = 26
    RULE_operatorStrcat = 27
    RULE_operatorAddSub = 28
    RULE_operatorMulDivMod = 29
    RULE_operatorUnary = 30
    RULE_operatorPower = 31
    RULE_number = 32
    RULE_string = 33

    ruleNames =  [ u"chunk", u"block", u"stat", u"retstat", u"label", u"funcname", 
                   u"varlist", u"namelist", u"explist", u"exp", u"var", 
                   u"prefixexp", u"functioncall", u"varOrExp", u"nameAndArgs", 
                   u"varSuffix", u"args", u"functiondef", u"funcbody", u"parlist", 
                   u"tableconstructor", u"fieldlist", u"field", u"fieldsep", 
                   u"operatorOr", u"operatorAnd", u"operatorComparison", 
                   u"operatorStrcat", u"operatorAddSub", u"operatorMulDivMod", 
                   u"operatorUnary", u"operatorPower", u"number", u"string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    NAME=50
    NORMALSTRING=51
    CHARSTRING=52
    LONGSTRING=53
    INT=54
    HEX=55
    FLOAT=56
    HEX_FLOAT=57
    COMMENT=58
    LINE_COMMENT=59
    WS=60
    SHEBANG=61

    def __init__(self, input):
        super(LuaParser, self).__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ChunkContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LuaParser.ChunkContext, self).__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def EOF(self):
            return self.getToken(LuaParser.EOF, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_chunk

        def enterRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.enterChunk(self)

        def exitRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.exitChunk(self)




    def chunk(self):

        localctx = LuaParser.ChunkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_chunk)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.block()
            self.state = 69
            self.match(LuaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LuaParser.BlockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.StatContext)
            else:
                return self.getTypedRuleContext(LuaParser.StatContext,i)


        def retstat(self):
            return self.getTypedRuleContext(LuaParser.RetstatContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_block

        def enterRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.enterBlock(self)

        def exitRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.exitBlock(self)




    def block(self):

        localctx = LuaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LuaParser.T__0) | (1 << LuaParser.T__2) | (1 << LuaParser.T__3) | (1 << LuaParser.T__4) | (1 << LuaParser.T__6) | (1 << LuaParser.T__7) | (1 << LuaParser.T__9) | (1 << LuaParser.T__13) | (1 << LuaParser.T__16) | (1 << LuaParser.T__17) | (1 << LuaParser.T__19) | (1 << LuaParser.T__26) | (1 << LuaParser.NAME))) != 0):
                self.state = 71
                self.stat()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            _la = self._input.LA(1)
            if _la==LuaParser.T__18:
                self.state = 77
                self.retstat()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LuaParser.StatContext, self).__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(LuaParser.VarlistContext,0)


        def explist(self):
            return self.getTypedRuleContext(LuaParser.ExplistContext,0)


        def functioncall(self):
            return self.getTypedRuleContext(LuaParser.FunctioncallContext,0)


        def label(self):
            return self.getTypedRuleContext(LuaParser.LabelContext,0)


        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def block(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.BlockContext)
            else:
                return self.getTypedRuleContext(LuaParser.BlockContext,i)


        def exp(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(LuaParser.ExpContext,i)


        def namelist(self):
            return self.getTypedRuleContext(LuaParser.NamelistContext,0)


        def funcname(self):
            return self.getTypedRuleContext(LuaParser.FuncnameContext,0)


        def funcbody(self):
            return self.getTypedRuleContext(LuaParser.FuncbodyContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_stat

        def enterRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.enterStat(self)

        def exitRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.exitStat(self)




    def stat(self):

        localctx = LuaParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 161
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.match(LuaParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.varlist()
                self.state = 82
                self.match(LuaParser.T__1)
                self.state = 83
                self.explist()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.functioncall()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.label()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 87
                self.match(LuaParser.T__2)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 88
                self.match(LuaParser.T__3)
                self.state = 89
                self.match(LuaParser.NAME)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 90
                self.match(LuaParser.T__4)
                self.state = 91
                self.block()
                self.state = 92
                self.match(LuaParser.T__5)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 94
                self.match(LuaParser.T__6)
                self.state = 95
                self.exp(0)
                self.state = 96
                self.match(LuaParser.T__4)
                self.state = 97
                self.block()
                self.state = 98
                self.match(LuaParser.T__5)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 100
                self.match(LuaParser.T__7)
                self.state = 101
                self.block()
                self.state = 102
                self.match(LuaParser.T__8)
                self.state = 103
                self.exp(0)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 105
                self.match(LuaParser.T__9)
                self.state = 106
                self.exp(0)
                self.state = 107
                self.match(LuaParser.T__10)
                self.state = 108
                self.block()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LuaParser.T__11:
                    self.state = 109
                    self.match(LuaParser.T__11)
                    self.state = 110
                    self.exp(0)
                    self.state = 111
                    self.match(LuaParser.T__10)
                    self.state = 112
                    self.block()
                    self.state = 118
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 121
                _la = self._input.LA(1)
                if _la==LuaParser.T__12:
                    self.state = 119
                    self.match(LuaParser.T__12)
                    self.state = 120
                    self.block()


                self.state = 123
                self.match(LuaParser.T__5)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 125
                self.match(LuaParser.T__13)
                self.state = 126
                self.match(LuaParser.NAME)
                self.state = 127
                self.match(LuaParser.T__1)
                self.state = 128
                self.exp(0)
                self.state = 129
                self.match(LuaParser.T__14)
                self.state = 130
                self.exp(0)
                self.state = 133
                _la = self._input.LA(1)
                if _la==LuaParser.T__14:
                    self.state = 131
                    self.match(LuaParser.T__14)
                    self.state = 132
                    self.exp(0)


                self.state = 135
                self.match(LuaParser.T__4)
                self.state = 136
                self.block()
                self.state = 137
                self.match(LuaParser.T__5)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 139
                self.match(LuaParser.T__13)
                self.state = 140
                self.namelist()
                self.state = 141
                self.match(LuaParser.T__15)
                self.state = 142
                self.explist()
                self.state = 143
                self.match(LuaParser.T__4)
                self.state = 144
                self.block()
                self.state = 145
                self.match(LuaParser.T__5)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 147
                self.match(LuaParser.T__16)
                self.state = 148
                self.funcname()
                self.state = 149
                self.funcbody()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 151
                self.match(LuaParser.T__17)
                self.state = 152
                self.match(LuaParser.T__16)
                self.state = 153
                self.match(LuaParser.NAME)
                self.state = 154
                self.funcbody()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 155
                self.match(LuaParser.T__17)
                self.state = 156
                self.namelist()
                self.state = 159
                _la = self._input.LA(1)
                if _la==LuaParser.T__1:
                    self.state = 157
                    self.match(LuaParser.T__1)
                    self.state = 158
                    self.explist()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RetstatContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LuaParser.RetstatContext, self).__init__(parent, invokingState)
            self.parser = parser

        def explist(self):
            return self.getTypedRuleContext(LuaParser.ExplistContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_retstat

        def enterRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.enterRetstat(self)

        def exitRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.exitRetstat(self)




    def retstat(self):

        localctx = LuaParser.RetstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_retstat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(LuaParser.T__18)
            self.state = 165
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LuaParser.T__16) | (1 << LuaParser.T__22) | (1 << LuaParser.T__23) | (1 << LuaParser.T__24) | (1 << LuaParser.T__25) | (1 << LuaParser.T__26) | (1 << LuaParser.T__30) | (1 << LuaParser.T__42) | (1 << LuaParser.T__46) | (1 << LuaParser.T__47) | (1 << LuaParser.NAME) | (1 << LuaParser.NORMALSTRING) | (1 << LuaParser.CHARSTRING) | (1 << LuaParser.LONGSTRING) | (1 << LuaParser.INT) | (1 << LuaParser.HEX) | (1 << LuaParser.FLOAT) | (1 << LuaParser.HEX_FLOAT))) != 0):
                self.state = 164
                self.explist()


            self.state = 168
            _la = self._input.LA(1)
            if _la==LuaParser.T__0:
                self.state = 167
                self.match(LuaParser.T__0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LabelContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LuaParser.LabelContext, self).__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_label

        def enterRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.enterLabel(self)

        def exitRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.exitLabel(self)




    def label(self):

        localctx = LuaParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_label)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(LuaParser.T__19)
            self.state = 171
            self.match(LuaParser.NAME)
            self.state = 172
            self.match(LuaParser.T__19)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncnameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LuaParser.FuncnameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i=None):
            if i is None:
                return self.getTokens(LuaParser.NAME)
            else:
                return self.getToken(LuaParser.NAME, i)

        def getRuleIndex(self):
            return LuaParser.RULE_funcname

        def enterRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.enterFuncname(self)

        def exitRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.exitFuncname(self)




    def funcname(self):

        localctx = LuaParser.FuncnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcname)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(LuaParser.NAME)
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LuaParser.T__20:
                self.state = 175
                self.match(LuaParser.T__20)
                self.state = 176
                self.match(LuaParser.NAME)
                self.state = 181
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 184
            _la = self._input.LA(1)
            if _la==LuaParser.T__21:
                self.state = 182
                self.match(LuaParser.T__21)
                self.state = 183
                self.match(LuaParser.NAME)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LuaParser.VarlistContext, self).__init__(parent, invokingState)
            self.parser = parser

        def var(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.VarContext)
            else:
                return self.getTypedRuleContext(LuaParser.VarContext,i)


        def getRuleIndex(self):
            return LuaParser.RULE_varlist

        def enterRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.enterVarlist(self)

        def exitRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.exitVarlist(self)




    def varlist(self):

        localctx = LuaParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.var()
            self.state = 191
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LuaParser.T__14:
                self.state = 187
                self.match(LuaParser.T__14)
                self.state = 188
                self.var()
                self.state = 193
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NamelistContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LuaParser.NamelistContext, self).__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i=None):
            if i is None:
                return self.getTokens(LuaParser.NAME)
            else:
                return self.getToken(LuaParser.NAME, i)

        def getRuleIndex(self):
            return LuaParser.RULE_namelist

        def enterRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.enterNamelist(self)

        def exitRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.exitNamelist(self)




    def namelist(self):

        localctx = LuaParser.NamelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_namelist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self.match(LuaParser.NAME)
            self.state = 199
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 195
                    self.match(LuaParser.T__14)
                    self.state = 196
                    self.match(LuaParser.NAME) 
                self.state = 201
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExplistContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LuaParser.ExplistContext, self).__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(LuaParser.ExpContext,i)


        def getRuleIndex(self):
            return LuaParser.RULE_explist

        def enterRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.enterExplist(self)

        def exitRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.exitExplist(self)




    def explist(self):

        localctx = LuaParser.ExplistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_explist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self.exp(0)
            self.state = 207
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LuaParser.T__14:
                self.state = 203
                self.match(LuaParser.T__14)
                self.state = 204
                self.exp(0)
                self.state = 209
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LuaParser.ExpContext, self).__init__(parent, invokingState)
            self.parser = parser

        def operatorUnary(self):
            return self.getTypedRuleContext(LuaParser.OperatorUnaryContext,0)


        def exp(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(LuaParser.ExpContext,i)


        def number(self):
            return self.getTypedRuleContext(LuaParser.NumberContext,0)


        def string(self):
            return self.getTypedRuleContext(LuaParser.StringContext,0)


        def functiondef(self):
            return self.getTypedRuleContext(LuaParser.FunctiondefContext,0)


        def prefixexp(self):
            return self.getTypedRuleContext(LuaParser.PrefixexpContext,0)


        def tableconstructor(self):
            return self.getTypedRuleContext(LuaParser.TableconstructorContext,0)


        def operatorPower(self):
            return self.getTypedRuleContext(LuaParser.OperatorPowerContext,0)


        def operatorMulDivMod(self):
            return self.getTypedRuleContext(LuaParser.OperatorMulDivModContext,0)


        def operatorAddSub(self):
            return self.getTypedRuleContext(LuaParser.OperatorAddSubContext,0)


        def operatorStrcat(self):
            return self.getTypedRuleContext(LuaParser.OperatorStrcatContext,0)


        def operatorComparison(self):
            return self.getTypedRuleContext(LuaParser.OperatorComparisonContext,0)


        def operatorAnd(self):
            return self.getTypedRuleContext(LuaParser.OperatorAndContext,0)


        def operatorOr(self):
            return self.getTypedRuleContext(LuaParser.OperatorOrContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_exp

        def enterRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.enterExp(self)

        def exitRule(self, listener):
            if isinstance( listener, LuaListener ):
                listener.exitExp(self)



    def exp(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LuaParser.ExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_exp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 223
            token = self._input.LA(1)
            if token in [LuaParser.T__42, LuaParser.T__46, LuaParser.T__47]:
                self.state = 211
                self.operatorUnary()
                self.state = 212
                self.exp(7)

            elif token in [LuaParser.T__22]:
                self.state = 214
                self.match(LuaParser.T__22)

            elif token in [LuaParser.T__23]:
                self.state = 215
                self.match(LuaParser.T__23)

            elif token in [LuaParser.T__24]:
                self.state = 216
                self.match(LuaParser.T__24)

            elif token in [LuaParser.INT, LuaParser.HEX, LuaParser.FLOAT, LuaParser.HEX_FLOAT]:
                self.state = 217
                self.number()

            elif token in [LuaParser.NORMALSTRING, LuaParser.CHARSTRING, LuaParser.LONGSTRING]:
                self.state = 218
                self.string()

            elif token in [LuaParser.T__25]:
                self.state = 219
                self.match(LuaParser.T__25)

            elif token in [LuaParser.T__16]:
                self.state = 220
                self.functiondef()

            elif token in [LuaParser.T__26, LuaParser.NAME]:
                self.state = 221
                self.prefixexp()

            elif token in [LuaParser.T__30]:
                self.state = 222
                self.tableconstructor()

            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 255
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 253
                    la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                    if la_ == 1:
                        localctx = LuaParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 225
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 226
                        self.operatorPower()
                        self.state = 227
                        self.exp(8)
                        pass

                    elif la_ == 2:
                        localctx = LuaParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 229
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 230
                        self.operatorMulDivMod()
                        self.state = 231
                        self.exp(7)
                        pass
